style: Fix headings font and oldered list spacing

--- a/src/style.css
+++ b/src/style.css
@@ -486,8 +486,12 @@ a:focus {
 
 .blog-post,
 .blog-post header h1,
+.blog-post h1,
 .blog-post h2,
-.blog-post h3 {
+.blog-post h3,
+.blog-post h4,
+.blog-post h5,
+.blog-post h6 {
   font-family: "Nanum Gothic";
 }
 
@@ -504,6 +508,10 @@ a:focus {
 }
 
 .blog-post section > ul {
+  padding-left: var(--spacing-4);
+}
+
+.blog-post section > ol {
   padding-left: var(--spacing-4);
 }
 
